--- a/aboutus.html
+++ b/aboutus.html
@@ -35,7 +35,7 @@
 <body class="bg-gray-100">
     <header class="text-white text-center py-4">
         <div class="container d-flex justify-content-center align-items-center">
-            <a href="homepage.html">
+            <a href="thisnthatmixupshop.html">
                 <img src="assets/logo.png" alt="Business Logo" class="logo img-fluid mx-auto d-block small-logo">
             </a>
         </div>
@@ -44,7 +44,7 @@
     <nav class="bg-primary text-white">
         <div class="container">
             <ul class="nav justify-content-center">
-                <li class="nav-item"><a class="nav-link text-white" href="homepage.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="thisnthatmixupshop.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="catalog_apparel.html">Apparel</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="catalog_accessories.html">Accessories</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="catalog_figures.html">Figures</a></li>
@@ -90,9 +90,9 @@
                                     <td>Corozal Town</td>
                                 </tr>
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td>March 14th - 15th</td>
+                                    <td>Pop Up Shop</td>
+                                    <td>San Pedro</td>
                                 </tr>
                                 <tr>
                                     <td></td>
