--- a/catalog_apparel.html
+++ b/catalog_apparel.html
@@ -8,11 +8,12 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/global.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    
 </head>
 <body class="bg-gray-100">
     <header class="text-white text-center py-4">
         <div class="container d-flex justify-content-center align-items-center">
-            <a href="homepage.html">
+            <a href="thisnthatmixupshop.html">
                 <img src="assets/logo.png" alt="Business Logo" class="logo img-fluid mx-auto d-block small-logo">
             </a>
         </div>
@@ -21,7 +22,7 @@
     <nav class="bg-primary text-white">
         <div class="container">
             <ul class="nav justify-content-center">
-                <li class="nav-item"><a class="nav-link text-white" href="homepage.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="thisnthatmixupshop.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="catalog_apparel.html">Apparel</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="catalog_accessories.html">Accessories</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="catalog_figures.html">Figures</a></li>
