--- a/thisnthatmixupshop.html
+++ b/thisnthatmixupshop.html
@@ -32,7 +32,7 @@
         }
         .square-image {
             width: 100%;
-            padding-top: 100%; /* 1:1 Aspect Ratio */
+            padding-top: 100%; 
             position: relative;
         }
         .square-image img {
@@ -44,7 +44,7 @@
             object-fit: cover;
         }
         .catalog-card {
-            max-width: 300px; /* Adjust this value as needed */
+            max-width: 300px;
             margin: 0 auto;
             transition: background-color 0.3s ease;
         }
@@ -56,7 +56,7 @@
 <body class="bg-gray-100">
     <header class="text-white text-center py-4">
         <div class="container d-flex justify-content-center align-items-center">
-            <a href="homepage.html">
+            <a href="thisnthatmixupshop.html">
                 <img src="assets/logo.png" alt="Business Logo" class="logo img-fluid mx-auto d-block small-logo">
             </a>
         </div>
@@ -65,7 +65,10 @@
     <nav class="bg-primary text-white">
         <div class="container">
             <ul class="nav justify-content-center">
-                <li class="nav-item"><a class="nav-link text-white" href="homepage.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="thisnthatmixupshop.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="catalog_apparel.html">Apparel</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="catalog_accessories.html">Accessories</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="catalog_figures.html">Figures</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="aboutus.html">About Us</a></li>
                 <li class="nav-item">
                     <a href="cart.html" class="nav-link text-white">
