--- a/aboutus.html
+++ b/aboutus.html
@@ -122,6 +122,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
+    <script src="js/cart.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             const calendar = document.getElementById("calendar");
