--- a/catalog_accessories.html
+++ b/catalog_accessories.html
@@ -39,7 +39,7 @@
     <main class="container my-5">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
-                <div class="card text-center">
+                <div class="card w-75 mx-auto text-center">
                     <div class="card-body">
                         <h2 class="fs-1 mb-4">Accessories</h2>
                         <p class="fs-2">Coming Soon!</p>
@@ -57,5 +57,6 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 </html>
