--- a/catalog_apparel.html
+++ b/catalog_apparel.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,9 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/global.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    
+
 </head>
+
 <body class="bg-gray-100">
     <header class="text-white text-center py-4">
         <div class="container d-flex justify-content-center align-items-center">
@@ -38,10 +40,20 @@
     </nav>
 
     <main class="container my-5">
-        <div class="row justify-content-center">
-            <h2 class="text-center mb-4">Apparel</h2>
-            <!-- Apparel Products -->
-            <div id="apparel-products" class="row justify-content-center"></div>
+        <div class="card w-75 mx-auto">
+            <div class="row justify-content-center">
+                <h2 class="text-center mb-4 display-4">Tees</h2>
+                <!-- Tees Products -->
+                <div id="apparel-products" class="row justify-content-center"></div>
+            </div>
+        </div>
+        <br> <br>
+        <div class="card w-75 mx-auto">
+            <div class="row justify-content-center">
+                <h2 class="text-center mb-4 display-4">Dry Fit Tees</h2>
+                <!-- Dry Fit Tees Products -->
+                <div id="dry-fit-products" class="row justify-content-center"></div>
+            </div>
         </div>
     </main>
 
@@ -55,5 +67,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
     <script src="js/product.js"></script>
     <script src="js/fetch_apparel.js"></script>
+    <script src="js/cart.js"></script>
 </body>
+
 </html>
