--- a/catalog_figures.html
+++ b/catalog_figures.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="css/global.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-gray-100">
     <header class="text-white text-center py-4">
         <div class="container d-flex justify-content-center align-items-center">
@@ -37,10 +39,12 @@
     </nav>
 
     <main class="container my-5">
-        <div class="row justify-content-center">
-            <h2 class="text-center mb-4">Figures</h2>
-            <!-- Figures Products -->
-            <div id="figures-products" class="row justify-content-center"></div>
+        <div class="card w-75 mx-auto">
+            <div class="row justify-content-center">
+                <h2 class="text-center mb-4 display-4">Figures</h2>
+                <!-- Figures Products -->
+                <div id="figures-products" class="row justify-content-center"></div>
+            </div>
         </div>
     </main>
 
@@ -54,5 +58,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
     <script src="js/product.js"></script>
     <script src="js/fetch_figures.js"></script>
+    <script src="js/cart.js"></script>
+
 </body>
+
 </html>
