--- a/product.html
+++ b/product.html
@@ -60,7 +60,7 @@
         </div>
     </header>
 
-    <nav class="bg-primary text-white">
+    <nav class="bg-primary text-white sticky-top">
         <div class="container">
             <ul class="nav justify-content-center">
                 <li class="nav-item"><a class="nav-link text-white" href="thisnthatmixupshop.html">Home</a></li>
@@ -81,7 +81,7 @@
     <main class="container my-5">
         <div id="product-details" class="row justify-content-center">
             <div class="col-12 col-md-6 text-center">
-                <img id="product-image" class="img-fluid product-image" alt="Product Image">
+                <img id="product-image" class="img-fluid product-image border border-primary-subtle" alt="Product Image">
                 <div id="image-thumbnails" class="d-flex flex-wrap justify-content-center mt-3"></div>
             </div>
             <div class="col-12 col-md-6">
@@ -115,5 +115,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
     <script src="js/product.js"></script>
     <script src="js/fetch_product.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 </html>
