--- a/thisnthatmixupshop.html
+++ b/thisnthatmixupshop.html
@@ -106,7 +106,7 @@
         </div>
 
         <!-- Apparel Section -->
-        <div class="card mb-5">
+        <div class="card mb-5 w-75 mx-auto">
             <div class="card-body">
                 <h2 class="text-center mb-4 display-4">Apparel</h2>
                 <div class="row justify-content-center">
@@ -148,7 +148,7 @@
         </div>
 
         <!-- Figures Section -->
-        <div class="card mb-5">
+        <div class="card mb-5 w-75 mx-auto">
             <div class="card-body">
                 <h2 class="text-center mb-4 display-4">Figures</h2>
                 <div class="row justify-content-center">
@@ -190,7 +190,7 @@
         </div>
 
         <!-- Accessories Section -->
-        <div class="card mb-5">
+        <div class="card mb-5 w-75 mx-auto">
             <div class="card-body">
                 <h2 class="text-center mb-4 display-4">Accessories</h2>
                 <div class="row justify-content-center">
@@ -210,5 +210,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
     <script src="js/product.js"></script>
     <script src="js/fetch_apparel.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 </html>
