--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,7 @@
         <title>Cart</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link rel="stylesheet" href="css/global.css">
         <script src="https://cdn.tailwindcss.com"></script>
         <style>
@@ -46,23 +47,33 @@
                 </a>
             </div>
         </header>
-        <nav class="bg-primary text-white">
+        
+        <nav class="bg-primary text-white sticky-top">
             <div class="container">
                 <ul class="nav justify-content-center">
                     <li class="nav-item"><a class="nav-link text-white" href="thisnthatmixupshop.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="catalog_apparel.html">Apparel</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="catalog_accessories.html">Accessories</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="catalog_figures.html">Figures</a></li>
+                    <div class="dropdown">
+                        <a class="nav-link text-white dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Shop
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <li><a class="dropdown-item" href="catalog_apparel.html">Apparel</a></li>
+                            <li><a class="dropdown-item" href="catalog_accessories.html">Accessories</a></li>
+                            <li><a class="dropdown-item" href="catalog_figures.html">Figures</a></li>
+                        </ul>
+                    </div>
                     <li class="nav-item"><a class="nav-link text-white" href="aboutus.html">About Us</a></li>
                     <li class="nav-item">
                         <a href="cart.html" class="nav-link text-white">
-                            <i class="bi bi-cart"></i>
+                            <i class="bi bi-cart2"></i>
                             <span id="cart-count">0</span> items
                         </a>
                     </li>
                 </ul>
             </div>
         </nav>
+        
         <main class="container my-5">
             <div class="row justify-content-center">
                 <h2 class="text-center mb-4">Cart</h2>
