--- a/product.html
+++ b/product.html
@@ -1,42 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/global.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .thumbnail {
             cursor: pointer;
             margin: 5px;
-            width: 100px; /* Adjust the width as needed */
-            height: 100px; /* Adjust the height as needed */
+            width: 100px;
+            height: 100px;
         }
+
         .thumbnail.active {
             border: 2px solid #007bff;
         }
+
         .product-image {
-            max-width: 400px; /* Adjust the max-width as needed */
-            max-height: 400px; /* Adjust the max-height as needed */
+            max-width: 300px;
+            max-height: 300px;
             display: block;
             margin: 0 auto;
         }
+
         .product-title {
-            font-size: 2rem; /* Adjust the font size as needed */
+            font-size: 2rem;
         }
+
         .product-description {
-            font-size: 1.25rem; /* Adjust the font size as needed */
+            font-size: 1.25rem;
         }
+
         .product-price {
-            font-size: 1.5rem; /* Adjust the font size as needed */
+            font-size: 1.5rem;
         }
+
         .quantity-container {
             display: flex;
             align-items: center;
         }
+
         .quantity-container button {
             width: 30px;
             height: 30px;
@@ -44,6 +53,7 @@
             justify-content: center;
             align-items: center;
         }
+
         .quantity-container span {
             width: 60px;
             text-align: center;
@@ -51,6 +61,7 @@
         }
     </style>
 </head>
+
 <body class="bg-gray-100">
     <header class="text-white text-center py-4">
         <div class="container d-flex justify-content-center align-items-center">
@@ -64,14 +75,22 @@
         <div class="container">
             <ul class="nav justify-content-center">
                 <li class="nav-item"><a class="nav-link text-white" href="thisnthatmixupshop.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="catalog_apparel.html">Apparel</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="catalog_accessories.html">Accessories</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="catalog_figures.html">Figures</a></li>
+                <div class="dropdown">
+                    <a class="nav-link text-white dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Shop
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <li><a class="dropdown-item" href="catalog_apparel.html">Apparel</a></li>
+                        <li><a class="dropdown-item" href="catalog_accessories.html">Accessories</a></li>
+                        <li><a class="dropdown-item" href="catalog_figures.html">Figures</a></li>
+                    </ul>
+                </div>
                 <li class="nav-item"><a class="nav-link text-white" href="aboutus.html">About Us</a></li>
                 <li class="nav-item">
                     <a href="cart.html" class="nav-link text-white">
-                        <i class="bi bi-cart"></i>
-                        <span id="cart-count">0</span> items - $<span id="cart-total">0.00</span>
+                        <i class="bi bi-cart2"></i>
+                        <span id="cart-count">0</span> items
                     </a>
                 </li>
             </ul>
@@ -80,27 +99,28 @@
 
     <main class="container my-5">
         <div id="product-details" class="row justify-content-center">
-            <div class="col-12 col-md-6 text-center">
-                <img id="product-image" class="img-fluid product-image border border-primary-subtle" alt="Product Image">
+            <div class="col-12 col-md-4 text-center">
+                <img id="product-image" class="img-fluid product-image card-img-top" alt="Product Image">
                 <div id="image-thumbnails" class="d-flex flex-wrap justify-content-center mt-3"></div>
             </div>
             <div class="col-12 col-md-6">
                 <h1 id="product-title" class="product-title"></h1>
-                <p id="product-description" class="product-description"></p>
                 <p><strong>Price:</strong> <span id="product-price" class="product-price"></span></p>
-                <div id="product-sizes" class="mb-3" style="display: none;">
-                    <label><strong>Available Sizes:</strong></label>
-                    <div id="size-buttons" class="d-flex flex-wrap"></div>
-                </div>
                 <div class="mb-3">
                     <label for="quantity"><strong>Quantity:</strong></label>
-                    <div class="quantity-container">
+                    <div class="quantity-container mb-2">
                         <button id="decrease-quantity" class="btn btn-outline-secondary">-</button>
                         <span id="quantity">1</span>
                         <button id="increase-quantity" class="btn btn-outline-secondary">+</button>
                     </div>
+
+                    <button class="btn btn-primary">Add to Cart</button>
+                    <div id="product-sizes" class="mb-3" style="display: none;">
+                        <label><strong>Available Sizes:</strong></label>
+                        <div id="size-buttons" class="d-flex flex-wrap"></div>
+                    </div>
+                    <p id="product-description" class="product-description"></p>
                 </div>
-                <button class="btn btn-primary">Add to Cart</button>
             </div>
         </div>
     </main>
@@ -117,4 +137,5 @@
     <script src="js/fetch_product.js"></script>
     <script src="js/cart.js"></script>
 </body>
+
 </html>
