--- a/testing.html
+++ b/testing.html
@@ -71,38 +71,40 @@
 
 <body class="bg-gray-100">
     <header class="text-white text-center py-3">
-        <div class="container d-flex justify-content-center align-items-center">
-            <a href="thisnthatmixupshop.html">
-                <img src="assets/logo.png" alt="Business Logo" class="logo img-fluid mx-auto d-block small-logo">
-            </a>
-        </div>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <img src="assets/logo.png" alt="Logo" class="navbar-brand logo">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="thisnthatmixupshop.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="catalog_apparel.html">Apparel</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="catalog_accessories.html">Accessories</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="catalog_figures.html">Figures</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="aboutus.html">About Us</a>
+                  </li>
+                  <li class="nav-item">
+                    <i class="bi bi-cart2 fs-3"></i>
+                    <span id="cart-count">0</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
 
-    <nav class="bg-primary text-white sticky-top">
-        <div class="container">
-            <ul class="nav justify-content-center">
-                <li class="nav-item"><a class="nav-link text-white" href="thisnthatmixupshop.html">Home</a></li>
-                <div class="dropdown">
-                    <a class="nav-link text-white dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Shop
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <li><a class="dropdown-item" href="catalog_apparel.html">Apparel</a></li>
-                        <li><a class="dropdown-item" href="catalog_accessories.html">Accessories</a></li>
-                        <li><a class="dropdown-item" href="catalog_figures.html">Figures</a></li>
-                    </ul>
-                </div>
-                <li class="nav-item"><a class="nav-link text-white" href="aboutus.html">About Us</a></li>
-                <li class="nav-item">
-                    <a href="cart.html" class="nav-link text-white">
-                        <i class="bi bi-cart2"></i>
-                        <span id="cart-count">0</span> items
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    
 
     <main class="container my-5">
         <!-- Section Links -->
